# Explicit_Volterra

./: CMakeLists.txt  Explicit_Volterra  README.md  main.cpp  output.txt  volterra.cpp  volterra.h
outputs/: all.txt  all_exp.txt  beta_n.txt  beta_n_exp.txt  gamma_n.txt  gamma_n_exp.txt  n_80_N_10_k_0.8_the_0.8_c10.txt  n_80_N_5_k_0.8_the_0.8_c10.txt  sum1_exp.txt  sum2.txt  sum2_exp.txt
